atualizando página de luxo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="content">
         <div class="banner">
-            <button>Carros de Luxo</button>
+            <button onclick="luxo()">Carros de Luxo</button>
         </div>
         <div class="card">
             <div>
@@ -47,5 +47,11 @@
             </div>
         </div>
     </div>
+
+    <script>
+        function luxo () {
+            window.location.replace('./luxo.html');
+        }
+    </script>
 </body>
 </html>
