--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="header">
-        <div>LuxCar</div>
+        <div><a href="./index.html">LuxCar</a></div>
         <ul>
             <li><a>Carros Antigos</a></li>
             <li><a>Produtos</a></li>
